--- a/Tutorials.ipynb
+++ b/Tutorials.ipynb
@@ -25,7 +25,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "magcluster 0.1.8ter) \u001b[?2004l\n",
+      "magcluster 0.1.8 \u001b[?2004l\n",
       " "
      ]
     },
@@ -376,7 +376,8 @@
       "[22:31:16] INFO - Generating results summary...\n",
       "[22:31:16] INFO - Writing alignments to: mgc_align.txt\n",
       "[22:31:16] INFO - Building clustermap.js visualisation\n",
-      "[22:31:16] INFO - Writing to: mgc_align.html\n"
+      "[22:31:16] INFO - Writing to: mgc_align.html\n",
+      "[22:31:17] INFO - Done!\n"
      ]
     }
    ],
@@ -399,10 +400,8 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
+   "cell_type": "markdown",
    "source": [],
-   "outputs": [],
    "metadata": {}
   }
  ],
