--- a/Tutorials.ipynb
+++ b/Tutorials.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "source": [
     "# check MagCluster version\r\n",
     "conda activate magcluster\r\n",
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "source": [
     "# Make a new folder\r\n",
     "mkdir magtest\r\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "source": [
     "# Download genomes from NCBI\r\n",
     "wget https://sra-download.ncbi.nlm.nih.gov/traces/wgs03/wgs_aux/LN/QR/LNQR01/LNQR01.1.fsa_nt.gz\r\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "source": [
     "# Check the genomes\r\n",
     "ls"
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "source": [
     "# Unzip files\r\n",
     "gunzip *.gz\r\n",
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "source": [
     "# Rename the genomes\r\n",
     "mv LNQR01.1.fsa_nt HCH-1.fasta\r\n",
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "source": [
     "magcluster prokka --evalue 1e-05 . "
    ],
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "source": [
     "# Move `.gbk` files to a new folder\r\n",
     "mkdir gbkfolder\r\n",
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "source": [
     "magcluster mgc_screen gbkfolder -o mgcfolder"
    ],
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "source": [
     "ls mgcfolder"
    ],
@@ -339,7 +339,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Good job! Now you can open the `.csv` files to check the magnetosome protein sequences.\n",
+    "Good job! Now you can open the `.csv` files to check the magnetosome protein sequences.\r\n",
     "![HCH-1_magpro.csv](docs/_static/HCH-1.PNG)"
    ],
    "metadata": {}
@@ -347,18 +347,18 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Step 3: MGCs visualization\n",
-    "Final step! We are almost there! \n",
-    "\n",
-    "Use Clinker to generate a MGCs figure. We recommand to use the `-o` parameter to generate a MGCs alignment file where you can browse the homologous gene similarities among genomes.\n",
-    "\n",
+    "## Step 4: MGCs visualization\r\n",
+    "Final step! We are almost there! \r\n",
+    "\r\n",
+    "Use Clinker to generate a MGCs figure. We recommand to use the `-o` parameter to generate a MGCs alignment file where you can browse the homologous gene similarities among genomes.\r\n",
+    "\r\n",
     "Be Careful! If there is complete genome(s) in your dataset, the alignment process will take unreasonable time. In that case, we recommand you skip the alignment process with `-na` (no alignment) parameter."
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "source": [
     "magcluster clinker -o mgc_align.txt -p mgc_align.html mgcfolder/*.gbk"
    ],
