--- a/Tutorials.ipynb
+++ b/Tutorials.ipynb
@@ -7,8 +7,8 @@
     "This is a simple example to help you quickly start MagCluster journey. We use the genome of ***Candidatus* Magnetominusculus xianensis strain HCH-1** to show how it works. Candidatus Magnetominusculus xianensis strain HCH-1 is a metagenomic assembled genome ([see the paper](https://www.pnas.org/content/114/9/2171#:~:text=However%2C%20the%20origin%20of%20magnetotactic%20behavior%20remains%20a,the%20earliest%20magnetic-sensing%20and%20biomineralizing%20organisms%20on%20Earth.)) which we will refer to as HCH-1 in this tutorial. \n",
     "## Step 1: Obtaining data\n",
     "You can download genome data from NCBI.\n",
-    "- HCH-1 [LNQR00000000](https://www.ncbi.nlm.nih.gov/Traces/wgs/LNQR01?display=contigs)\n",
-    "- IT-1 [LVJN00000000](https://www.ncbi.nlm.nih.gov/Traces/wgs/LVJN01?display=contigs)"
+    "- HCH-1 [LNQR00000000](https://www.ncbi.nlm.nih.gov/Traces/wgs/LNQR01?display=download)\n",
+    "- IT-1 [LVJN00000000](https://www.ncbi.nlm.nih.gov/Traces/wgs/LVJN01?display=download)"
    ],
    "metadata": {}
   },
@@ -78,7 +78,6 @@
      "name": "stdout",
      "text": [
       "Will not apply HSTS. The HSTS database must be a regular and non-world-writable file.\n",
-      "ERROR: could not open HSTS store at '/home/edith/.wget-hsts'. HSTS will be disabled.\n",
       "--2021-09-12 22:21:45--  https://sra-download.ncbi.nlm.nih.gov/traces/wgs03/wgs_aux/LN/QR/LNQR01/LNQR01.1.fsa_nt.gz\n",
       "Resolving sra-download.ncbi.nlm.nih.gov (sra-download.ncbi.nlm.nih.gov)... 130.14.250.25, 130.14.250.24, 130.14.250.27\n",
       "Connecting to sra-download.ncbi.nlm.nih.gov (sra-download.ncbi.nlm.nih.gov)|130.14.250.25|:443... connected.\n",
@@ -91,7 +90,6 @@
       "2021-09-12 22:21:48 (742 KB/s) - ‘LNQR01.1.fsa_nt.gz’ saved [1119868/1119868]\n",
       "\n",
       "Will not apply HSTS. The HSTS database must be a regular and non-world-writable file.\n",
-      "ERROR: could not open HSTS store at '/home/edith/.wget-hsts'. HSTS will be disabled.\n",
       "--2021-09-12 22:21:48--  https://sra-download.ncbi.nlm.nih.gov/traces/wgs03/wgs_aux/LV/JN/LVJN01/LVJN01.1.fsa_nt.gz\n",
       "Resolving sra-download.ncbi.nlm.nih.gov (sra-download.ncbi.nlm.nih.gov)... 165.112.9.235, 165.112.9.231, 165.112.9.232\n",
       "Connecting to sra-download.ncbi.nlm.nih.gov (sra-download.ncbi.nlm.nih.gov)|165.112.9.235|:443... connected.\n",
