--- a/Tutorials.ipynb
+++ b/Tutorials.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "source": [
     "# Tutorials\r\n",
-    "This is a simple example to help you quickly start MagCluster journey. We use the genome of ***Candidatus* Magnetominusculus xianensis strain HCH-1** ([see the paper](https://www.pnas.org/content/114/9/2171#:~:text=However%2C%20the%20origin%20of%20magnetotactic%20behavior%20remains%20a,the%20earliest%20magnetic-sensing%20and%20biomineralizing%20organisms%20on%20Earth.)) and ***Magnetofaba australis* IT-1** ([see the paper](https://www.frontiersin.org/articles/10.3389/fmicb.2014.00072/full)) to show how it works.\r\n",
+    "This is a simple example to help you quickly start MagCluster journey. We use the genomes of ***Candidatus* Magnetominusculus xianensis strain HCH-1** ([see the paper](https://www.pnas.org/content/114/9/2171#:~:text=However%2C%20the%20origin%20of%20magnetotactic%20behavior%20remains%20a,the%20earliest%20magnetic-sensing%20and%20biomineralizing%20organisms%20on%20Earth.)) and ***Magnetofaba australis* IT-1** ([see the paper](https://www.frontiersin.org/articles/10.3389/fmicb.2014.00072/full)) to show how it works.\r\n",
     "## Step 1: Obtaining data\r\n",
     "You can download genome data from NCBI.\r\n",
     "- HCH-1 [LNQR00000000](https://www.ncbi.nlm.nih.gov/Traces/wgs/LNQR01?display=download)\r\n",
@@ -117,7 +117,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "source": [
-    "# Check the genomes\r\n",
+    "# Check the genome files\r\n",
     "ls"
    ],
    "outputs": [
