--- a/Tutorials.ipynb
+++ b/Tutorials.ipynb
@@ -5,10 +5,10 @@
    "source": [
     "# Tutorials\r\n",
     "This is a simple example to help you quickly start MagCluster journey. We use the genomes of ***Candidatus* Magnetominusculus xianensis strain HCH-1** ([see the paper](https://www.pnas.org/content/114/9/2171#:~:text=However%2C%20the%20origin%20of%20magnetotactic%20behavior%20remains%20a,the%20earliest%20magnetic-sensing%20and%20biomineralizing%20organisms%20on%20Earth.)) and ***Magnetofaba australis* IT-1** ([see the paper](https://www.frontiersin.org/articles/10.3389/fmicb.2014.00072/full)) to show how it works.\r\n",
-    "## Step 1: Obtaining data\r\n",
-    "You can download genome data from NCBI.\r\n",
-    "- HCH-1 [LNQR00000000](https://www.ncbi.nlm.nih.gov/Traces/wgs/LNQR01?display=download)\r\n",
-    "- IT-1 [LVJN00000000](https://www.ncbi.nlm.nih.gov/Traces/wgs/LVJN01?display=download)"
+    "## Step 0: Prepare MagCluster\r\n",
+    "To start our journey, make sure you have a working MagCluster in your system.\r\n",
+    "\r\n",
+    "For installation informations, please check [Installation](https://github.com/RunJiaJi/MagCluster#installation)."
    ],
    "metadata": {}
   },
@@ -16,8 +16,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "source": [
-    "# check MagCluster version\r\n",
+    "# Activate magcluster environment\r\n",
     "conda activate magcluster\r\n",
+    "# Check MagCluster version\r\n",
     "magcluster -v"
    ],
    "outputs": [
@@ -35,6 +36,16 @@
      "evalue": "1",
      "traceback": []
     }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Step 1: Obtaining data\r\n",
+    "You can download genome data from NCBI.\r\n",
+    "- HCH-1 [LNQR00000000](https://www.ncbi.nlm.nih.gov/Traces/wgs/LNQR01?display=download)\r\n",
+    "- IT-1 [LVJN00000000](https://www.ncbi.nlm.nih.gov/Traces/wgs/LVJN01?display=download)"
    ],
    "metadata": {}
   },
