--- a/README.ipynb
+++ b/README.ipynb
@@ -3,6 +3,149 @@
   {
    "cell_type": "markdown",
    "source": [
+    "# MagCluster\r\n",
+    "![Anaconda.org](\r\n",
+    "https://anaconda.org/bioconda/magcluster/badges/version.svg) ![License](https://anaconda.org/bioconda/magcluster/badges/license.svg) ![Downloads](https://anaconda.org/bioconda/magcluster/badges/downloads.svg) ![Install](https://anaconda.org/bioconda/magcluster/badges/installer/conda.svg) ![Last update](\r\n",
+    "https://anaconda.org/bioconda/magcluster/badges/latest_release_date.svg)\r\n",
+    "\r\n",
+    "MagCluster is a tool for identification, annotation and visualization of magnetosome gene clusters (MGCs) from genomes of magnetotactic bacteria (MTB).\r\n",
+    "\r\n",
+    "## Contents\r\n",
+    "- [Installation](#installation)\r\n",
+    "  - [Conda](#conda)\r\n",
+    "  - [Bioconda](#bioconda)\r\n",
+    "  - [Pip](#pip)\r\n",
+    "- [Usage](#usage)\r\n",
+    "  - [Genomes annotation](#genomes-annotation)\r\n",
+    "  - [MGCs screening](#MGCs-screening)\r\n",
+    "  - [MGCs alignment and visualization](#MGCs-alignment-and-visualization)\r\n",
+    "- [Tutorials](#tutorials)\r\n",
+    "- [Citation](#Citation)\r\n",
+    "- [Contact us](#contact-us)\r\n",
+    "---\r\n",
+    "\r\n",
+    "## Installation\r\n",
+    "\r\n",
+    "### Conda\r\n",
+    "MagCluster can be installed through [Conda](https://www.anaconda.com/products/individual). We recommend creating a ***new environment*** for MagCluster to avoid dependency conflicts.\r\n",
+    "\r\n",
+    "```bash\r\n",
+    "wget https://github.com/RunJiaJi/magcluster/releases/download/0.1.8/magcluster-0.1.8.yml\r\n",
+    "conda env create -n magcluster --file magcluster-0.1.8.yml\r\n",
+    "\r\n",
+    "# Optinal cleanup\r\n",
+    "rm magcluster-0.1.8.yml\r\n",
+    "\r\n",
+    "# Activate magcluster environment\r\n",
+    "conda activate magcluster\r\n",
+    "\r\n",
+    "# Check for the usage of MagCluster\r\n",
+    "magcluster -h\r\n",
+    "```\r\n",
+    "### Bioconda\r\n",
+    "```bash\r\n",
+    "# Create magcluster environment\r\n",
+    "conda create -n magcluster\r\n",
+    "\r\n",
+    "# Activate magcluster environment\r\n",
+    "conda activate magcluster\r\n",
+    "\r\n",
+    "# Install MagCluster through bioconda channel\r\n",
+    "conda install -c conda-forge -c bioconda -c defaults blast=2.9 prokka=1.13.4 magcluster=0.1.8\r\n",
+    "\r\n",
+    "# Check for the usage of MagCluster\r\n",
+    "magcluster -h\r\n",
+    "```\r\n",
+    "### Pip\r\n",
+    "Alternatively, you can install MagCluster through pip in an existing environment. In this way, please make sure you have [Prokka](https://github.com/tseemann/prokka) installed.\r\n",
+    "\r\n",
+    "```bash\r\n",
+    "# Install MagCluster through pip\r\n",
+    "pip install magcluster\r\n",
+    "\r\n",
+    "# Check for the usage of MagCluster\r\n",
+    "magcluster -h\r\n",
+    "```\r\n",
+    "\r\n",
+    "## Usage\r\n",
+    "\r\n",
+    "\r\n",
+    "MagCluster comprises three modules for MGCs batch processing: \r\n",
+    "(i) MTB genomes annotation with [Prokka](https://github.com/tseemann/prokka)\r\n",
+    "(ii) MGCs screening with MGC_Screen\r\n",
+    "(iii) MGCs visualization with [Clinker](https://github.com/gamcil/clinker)\r\n",
+    "\r\n",
+    "\r\n",
+    "```bash\r\n",
+    "usage: magcluster [options]\r\n",
+    "\r\n",
+    "Options:\r\n",
+    "  {prokka,mgc_screen,clinker}\r\n",
+    "    prokka              Genome annotation with Prokka\r\n",
+    "    mgc_screen          Magnetosome gene cluster screening with MGC_Screen\r\n",
+    "    clinker             Magnetosome gene cluster visualization with Clinker\r\n",
+    "```\r\n",
+    "#### Genomes annotation\r\n",
+    " **Multiple genome files** or **genome-containing folder(s)** are accepted as input for batch annotation. The general usage is same as Prokka yet some parameters are set with default value for genomes batch annotation.\r\n",
+    "\r\n",
+    "To avoid confusion, the name of each genome is used as the output folder’s name (`--outdir GENOME_NAME`), output files’ prefix (`--prefix GENOME_NAME`), and GenBank file’s locus_tag (`--locustag GENOME_NAME`) by default. The `--compliant` parameter is also used by default to ensure standard GenBank files. \r\n",
+    "\r\n",
+    "For MGCs annotation, we provide a [reference MGCs file](https://github.com/RunJiaJi/magcluster/releases/download/v1.0/Magnetosome_protein_data.fasta.faa) containing magnetosome protein sequences from representative MTB strains which is attached to MagCluster and used by default. The value of `--evalue` is recommended to set to 1e-05.\r\n",
+    "```bash\r\n",
+    "example usage: \r\n",
+    "\r\n",
+    "# MGCs annotation with multiple MTB genomes as input\r\n",
+    "$ magcluster prokka --evalue 1e-05 --proteins Magnetosome_protein_data.fasta MTB_genome1.fasta MTB_genome2.fasta MTB_genome3.fasta\r\n",
+    "\r\n",
+    "# MGCs annotation with MTB genomes containing folder as input\r\n",
+    "$ magcluster prokka --evalue 1e-05 --proteins Magnetosome_protein_data.fasta /MTB_genomes_folder\r\n",
+    "```\r\n",
+    "#### MGCs screening\r\n",
+    "MGC_Screen module retrieves MGC-containing contigs/scaffolds in GenBank files. As magnetosome genes are always physically clustered in MTB genomes, MGC_Screen identify MGC based on the number of magnetosome genes gathered. \r\n",
+    "Three parameters involved in MGC screening, `--contiglength`, `--windowsize` and `--threshold` (see below). You can adjust them according to needs. \r\n",
+    "For each genome, MGC_Screen produces two files as output: a *GenBank file of MGCs containing contigs* and a *csv file summarizing all magnetosome protein sequences*.\r\n",
+    "```bash\r\n",
+    "\r\n",
+    "usage: magcluster mgc_screen [-h] [-l CONTIGLENGTH] [-win WINDOWSIZE] [-th THRESHOLD] [-o OUTDIR] gbkfile [gbkfile ...]\r\n",
+    "\r\n",
+    "positional arguments:\r\n",
+    "  gbkfile               .gbk/.gbf files to analyzed. Multiple files or files-containing folder is acceptable.\r\n",
+    "\r\n",
+    "optional arguments:\r\n",
+    "  -h, --help            show this help message and exit\r\n",
+    "  -l CONTIGLENGTH, --contiglength CONTIGLENGTH\r\n",
+    "                        The minimum size of a contig for screening (default '2,000 bp')\r\n",
+    "  -w WINDOWSIZE, --windowsize WINDOWSIZE\r\n",
+    "                        The window size in the text mining of magnetosome proteins (default '10,000 bp')\r\n",
+    "  -th THRESHOLD, --threshold THRESHOLD\r\n",
+    "                        The minimum number of magnetosome genes existed in a window size (default '3')\r\n",
+    "  -o OUTDIR, --outdir OUTDIR\r\n",
+    "                        Output folder (default 'mgc_screen')\r\n",
+    "```\r\n",
+    "```bash\r\n",
+    "example usage: \r\n",
+    "\r\n",
+    "# MGCs screening with multiple GenBank files as input\r\n",
+    "$ magcluster mgc_screen --threshold 3 --contiglength 2000 --windowsize 10000 file1.gbk file2.gbk file3.gbk\r\n",
+    "\r\n",
+    "# MGCs screening with GenBank files containing folder as input\r\n",
+    "$ magcluster mgc_screen --threshold 3 --contiglength 2000 --windowsize 10000 /gbkfiles_folder\r\n",
+    "```\r\n",
+    "#### MGCs alignment and visualization\r\n",
+    "We use [Clinker](https://github.com/gamcil/clinker) for MGCs alignment and visualization. Note that the `-p` parameter is used by default to generate an interactive HTML web page where you can modify the MGCs figure and export it as a publication-quality file.\r\n",
+    "\r\n",
+    "```bash\r\n",
+    "example usage: \r\n",
+    "\r\n",
+    "# MGCs screening with multiple GenBank files as input\r\n",
+    "$ magcluster clinker -p MGC_align.html /MGCs_files_folder/*.gbk\r\n",
+    "```"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "# Tutorials\r\n",
     "This is a simple example to help you quickly start MagCluster journey. We use the genomes of ***Candidatus* Magnetominusculus xianensis strain HCH-1** ([see the paper](https://www.pnas.org/content/pnas/114/9/2171.full.pdf)) and ***Magnetofaba australis* IT-1** ([see the paper](https://www.frontiersin.org/articles/10.3389/fmicb.2014.00072/full)) to show how it works.\r\n",
     "## Step 0: Prepare MagCluster\r\n",
@@ -410,7 +553,15 @@
   },
   {
    "cell_type": "markdown",
-   "source": [],
+   "source": [
+    "## Citation\r\n",
+    "The manuscript is in preparation.\r\n",
+    "\r\n",
+    "## Contact us\r\n",
+    "If you have any questions or suggestions, feel free to contact us.\r\n",
+    "\r\n",
+    "jirunjia@gmail.com or weilin@mail.iggcas.ac.cn"
+   ],
    "metadata": {}
   }
  ],
